fixed zindex overlap issue

--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -83,6 +83,7 @@
   font-size: 2rem;
   padding: 1rem;
   border-radius: 100%;
+  z-index: 999;
 
   .cart--number {
     display: flex;
